--- a/src/main/resources/templates/company/company-list.html
+++ b/src/main/resources/templates/company/company-list.html
@@ -86,7 +86,7 @@
                                 <div class="col-12 col-sm-6 col-lg-3 d-flex align-items-right">
                                     <a id="companyCreateLink" class="btn bg-dark text-light mb-1"
                                        th:href="@{/companies/create}"><i class="fa fa-plus mr-1"></i>
-                                        Create Company</a>
+                                        <button type="button" class="btn btn-info rounded-0">Create Company</button></a>
                                 </div>
                             </form>
                         </div>
